# ROS2-Robot-Emotion-Aware-RREA-

./: .gitignore  CONFIG_WIRING_AUDIT.md  FOUNDATION_TOPIC_CONTRACT.md  INSTALLATION.md  QUICKSTART.md  README.md  conftest.py  pytest.ini  tasks.md  tasks_phase1_foundation.md  tasks_phase2_modalities.md  tasks_phase3_validation_docs.md
config/: project.yaml
docker/: Dockerfile.base  Dockerfile.cpu  Dockerfile.laptop  Dockerfile.openvino  Dockerfile.tensorrt  docker-compose.yml
ros2_ws/src/emotion_robot_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/emotion_robot_bringup/emotion_robot_bringup/: audio_emotion_node.py  audio_features.py  camera_emotion_node.py  camera_source_launch.py  common.py  emotion_policy.py  fusion_node.py  inference_logic.py  laptop_gateway_node.py  laptop_inference_node.py  response_node.py  robot_gateway_node.py  robot_pipeline_node.py  robot_pipeline_policy.py  sentiment_logic.py  sentiment_node.py  speech_helpers.py  stt_node.py  tts_node.py  vision_helpers.py
ros2_ws/src/emotion_robot_bringup/launch/: laptop_inference.launch.py  robot_endpoint.launch.py  robot_only.launch.py  system.launch.py
ros2_ws/src/emotion_robot_bringup/test/: conftest.py  test_audio_features.py  test_common_helpers.py  test_emotion_policy.py  test_gateway_helpers.py  test_inference_logic.py  test_robot_pipeline_policy.py  test_sentiment_terms.py  test_speech_helpers.py  test_stt_tts_params.py  test_stt_whisper_backend.py  test_vision_helpers.py
scripts/: audio-test.sh  build.sh  clean.sh  config.sh  create_pkg.sh  deploy_mustar.sh  doctor.sh  down.sh  (+11 more)
(+35 files in other folders)
