<?xml version="1.0"?>
<package format="3">
  <name>emotion_robot_bringup</name>
  <version>0.1.0</version>
  <description>Dual-path emotion companion bringup and gateway nodes.</description>
  <maintainer email="ahmedelbamby1102003@gmail.com">Eng.Ahmed Hany ElBamby</maintainer>
  <author email="ahmedhanyelbamby@gmail.com">Eng.Ahmed Hany ElBamby</author>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
